gatekeeper/templates/k8spsread-only-root-filesystem.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsread-only-root-filesystem
  annotations:
    metadata.gatekeeper.sh/title: "Read-Only Root Filesystem"
    metadata.gatekeeper.sh/version: 1.0.0
    description: >-
      Restricts the use of non-read-only root filesystem.
spec:
  crd:
    spec:
      names:
        kind: K8sPSReadOnlyRootFilesystem
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spsread-only-root-filesystem

        violation[{"msg": msg, "details": {}}] {
            c := input_containers[_]
            not c.securityContext.readOnlyRootFilesystem
            msg := sprintf("Only read-only root filesystem is allowed: %v", [c.name])
        }

        input_containers[c] {
            c := input.review.object.spec.template.spec.containers[_]
        }
